# rust-auth-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  secret.key.example
migrations/2020-04-24-125704_create_users/: up.sql
migrations/2020-04-24-133759_create_login_history_table/: down.sql  up.sql
src/: main.rs  routes.rs  schema.rs
src/api/: auth_controller.rs  mod.rs  ping_controller.rs
src/config/: constants.rs  db.rs  mod.rs
src/middleware/: auth_middleware.rs
src/models/: login_history.rs  mod.rs  user.rs  user_token.rs
src/services/: auth_service.rs
src/utils/: token_utils.rs
