[package]
name = 'auth-api'
version = '0.1.0'
authors = ['Muhammad Rizal <rizal@ruangguru.com>']
edition = '2018'

[dependencies]
actix-web = '2.0.0'
actix-rt = '1.1.0'
actix-service = '1.0.5'
actix-cors = '0.2.0'
log = '0.4.8'
env_logger = '0.7'
diesel_migrations = '1.4.0'
serde = '1.0.*'
serde_derive = '1.0'
serde_json = '1.0'
dotenv = '0.15.0'
futures = '0.3.4'
failure = '0.1.7'
derive_more = '0.99'
jsonwebtoken = '7.1.0'
bcrypt = '0.7'

[dependencies.diesel]
version = '1.4.4'
features = [
    'postgres',
    'r2d2',
    'chrono',
    'numeric',
    'serde_json',
]

[dependencies.chrono]
version = '0.4.11'
features = ['serde']

[dependencies.uuid]
version = '0.8.1'
features = ['v4']

[dependencies.bigdecimal]
version = '0.1.0'
features = ['serde']
